--- a/static/styles/top_scorer.css
+++ b/static/styles/top_scorer.css
@@ -1,12 +1,16 @@
 .top-scorer-label {
-    grid-row: 2;
-    font-weight: bold;
+    grid-row: 2;  
+    align-self: baseline;
+  
 }
 
 .top-scorer-info {
     grid-row: 2;
     grid-column: 2;
     align-items: center;
+    text-align: center;
+    align-self: baseline;
+
 }
 .headshot-img {
     grid-row: 1 / span 2;  
