--- a/static/styles/close_button.css
+++ b/static/styles/close_button.css
@@ -1,9 +1,9 @@
 /* Close Button */
 .close {
     position:absolute;
-    padding-right: 16px;
+    padding-left: 16px;
     padding-top: 8px;
-    justify-self: right;
+    justify-self: left;
     color: #aaa;
     float: right;
     font-size: 28px;
