--- a/static/styles/tables.css
+++ b/static/styles/tables.css
@@ -6,7 +6,7 @@ table {
     border-collapse: collapse; /* Removes unnecessary borders */
     width: 100%; /* Ensure full width */
     border: none;
-    width: fit-content;
+    /* width: fit-content; */
     place-self: center;
 }
 
