--- a/templates/dynamic/styles/cards.css.jinja
+++ b/templates/dynamic/styles/cards.css.jinja
@@ -16,8 +16,14 @@
                 width: -webkit-fill-available;
                 width: -moz-available;
                 justify-items: anchor-center;
-                min-width: max-content;
+                max-width: {{ min_width_team_summary }}px;
                 display: grid;
                 justify-content: center;
+                
+            }
+
+            .table_card {
+                display: block;
+                justify-self: left;
                 
             }
