--- a/templates/dynamic/styles/previous_games.css.jinja
+++ b/templates/dynamic/styles/previous_games.css.jinja
@@ -1,14 +1,12 @@
 .previous_game{
-    display: grid
-    grid-column: 3;
+    /*display: grid;
+    grid-column: 3;*/
     justify-items: center;
-    width: -webkit-fill-available;
-    width: -moz-available;
+    max-width: -webkit-fill-available;
+    max-width: -moz-available;
     min-width: {{min_width_previous_games}};
-    max-width: {{min_width_team_summary}};
+    /*max-width: {{min_width_team_summary}};*/
     justify-content: center;
-    display: grid;
-    margin: 4px;
 }
 
 .previous_game span{
