--- a/templates/dynamic/styles/cards.css.jinja
+++ b/templates/dynamic/styles/cards.css.jinja
@@ -17,6 +17,7 @@
                 width: -moz-available;
                 justify-items: anchor-center;
                 max-width: {{ min_width_team_summary }}px;
+                min-width: fit-content;
                 display: grid;
                 justify-content: center;
                 
