--- a/templates/dynamic/styles/previous_games.css.jinja
+++ b/templates/dynamic/styles/previous_games.css.jinja
@@ -4,7 +4,7 @@
     justify-items: center;
     max-width: -webkit-fill-available;
     max-width: -moz-available;
-    min-width: {{min_width_previous_games}};
+    min-width: fit-content;
     /*max-width: {{min_width_team_summary}};*/
     justify-content: center;
 }
