--- a/templates/dynamic/styles/cards.css.jinja
+++ b/templates/dynamic/styles/cards.css.jinja
@@ -15,11 +15,10 @@
                 padding: {{card_padding}}px;            
                 width: -webkit-fill-available;
                 width: -moz-available;
-                justify-items: anchor-center;
                 max-width: {{ min_width_team_summary }}px;
                 min-width: fit-content;
-                display: grid;
                 justify-content: center;
+                justify-items: center;
                 
             }
 
