--- a/templates/dynamic/styles/previous_games.css.jinja
+++ b/templates/dynamic/styles/previous_games.css.jinja
@@ -1,4 +1,5 @@
-.previous_game{
+
+.previous_game_card{
     /*display: grid;
     grid-column: 3;*/
     justify-items: center;
@@ -9,7 +10,16 @@
     justify-content: center;
 }
 
-.previous_game span{
+.previous_game{
+    /*display: grid;
+    grid-column: 3;*/
+    justify-items: center;
+    max-width: -webkit-fill-available;
+    max-width: -moz-available;
+    min-width: fit-content;
+    /*max-width: {{min_width_team_summary}};*/
+    justify-content: center;
     display: flex;
     align-items: center;
 }
+
