--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
     <title>NHL Gamecard</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined&display=block" />
      <!-- Static CSS -->
+     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/primary_button.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/close_button.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/content.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/game_display.css') }}">
@@ -34,6 +35,34 @@
     <div id="loading-wheel">
         <div class="spinner"></div>
     </div>
+
+    <div id="statsPopUp" class="stats-popup">                    
+        <!-- Modal Content -->
+        <div class="stats-popup-content card_display content_modal">
+            <!-- Closing Button -->
+            <span class="close" id="closeBtn">&times;</span>
+            <!-- Navigation Buttons -->
+            <div class="tabs-container">
+                <div id="tabs">
+                    <div class="tab active" data-index="0">Points</div>
+                    <div class="tab" data-index="1">Goals</div>
+                    <div class="tab" data-index="2">Assists</div>
+                </div>
+            </div>
+            <div id="modalContent">
+                <div id="points-leaders-content">                                
+                    {{html_pts_leader_table | safe }} 
+                </div> 
+                <div id="goal-leaders-content" style="display: none;">
+                    {{html_goals_leader_table | safe }}
+                </div>
+                <div id="assist-leaders-content" style="display: none;">
+                    {{html_assists_leader_table | safe }}
+                </div>    
+            </div>                      
+        </div>
+    </div>
+
     <div class="content"> 
         <div class="container_title widthTargetElement ">
             <div class="title_card title_card_display">
@@ -55,16 +84,14 @@
                 </h2>      
                 <div class="top-scorer-label">
                     <b>Top Scorer:</b>
-                    <div class="more-stats" id="moreStats">
-                        <p style="margin: 0px">Show Top 5</p> 
-                        <span class="material-symbols-outlined" >
-                            arrow_drop_down
-                        </span>
-                    </div>
+                    <button class="primary_button" id="moreStats">
+                        Show Top 5        
+                    </button>
                 </div>
                 <div class ="top-scorer-info">
-                    <p style="  margin-block-end: 0"><b>{{top_scorer['name']}}</b> #{{top_scorer['sweaterNumber']}} {{top_scorer['position']}} </p>            
-                    <p style="  margin-block: 0">({{ top_scorer['goals']}}G-{{ top_scorer['assists']}}A-{{ top_scorer['points']}}P)</p>
+                    <p style="margin-block-end: 0"><b>{{top_scorer['name']}}</b> </p>    
+                    <p style="margin-block: 0"> #{{top_scorer['sweaterNumber']}} {{top_scorer['position']}}</p>        
+                    <p style="margin-block: 0">{{ top_scorer['goals']}}G-{{ top_scorer['assists']}}A-{{ top_scorer['points']}}P</p>
                 </div>
                 <div class="headshot-img">
                     <img src={{ top_scorer['headshot_url'] }} style="max-width: 150px;">
@@ -74,32 +101,7 @@
                     {{ html_team_summary | safe }}
                 </div>
             </div>
-            <div id="statsPopUp" class="stats-popup">                    
-                <!-- Modal Content -->
-                <div class="stats-popup-content card_display">
-                    <!-- Closing Button -->
-                    <span class="close" id="closeBtn">&times;</span>
-                    <!-- Navigation Buttons -->
-                    <div class="tabs-container">
-                        <div id="tabs">
-                            <div class="tab active" data-index="0">Points</div>
-                            <div class="tab" data-index="1">Goals</div>
-                            <div class="tab" data-index="2">Assists</div>
-                        </div>
-                    </div>
-                    <div id="modalContent">
-                        <div id="points-leaders-content">                                
-                            {{html_pts_leader_table | safe }} 
-                        </div> 
-                        <div id="goal-leaders-content" style="display: none;">
-                            {{html_goals_leader_table | safe }}
-                        </div>
-                        <div id="assist-leaders-content" style="display: none;">
-                            {{html_assists_leader_table | safe }}
-                        </div>    
-                    </div>                      
-                </div>
-            </div>
+            
             <div class="top_row_element card_display">
                 <h2  class="top_card_header">Next game</h2>
                 <div class="upcoming_game">
@@ -111,8 +113,8 @@
                     {{html_next_opponent_summary | safe  }}
                 </div>                
             </div>
-            <div class="previous_game card_display">
-                <h2>Last games</h2>
+            <div class="previous_game_card card_display">
+                <h2  class="top_card_header">Last games</h2>
                 <span class="game_display previous_game">{{html_last_games[0] | safe }}</span>
                 <span class="game_display previous_game">{{html_last_games[1] | safe }}</span>
                 <span class="game_display previous_game">{{html_last_games[2] | safe }}</span>
