fixed (?)  mobile scaling

--- a/templates/dynamic/styles/cards.css.jinja
+++ b/templates/dynamic/styles/cards.css.jinja
@@ -5,7 +5,7 @@
                 padding: {{card_padding}}px;            
                 width: -webkit-fill-available;                
                 width: -moz-available;
-                justify-items: anchor-center;
+                justify-items: center;
                 
             }
             .card_display {
@@ -19,6 +19,7 @@
                 min-width: fit-content;
                 justify-content: center;
                 justify-items: center;
+                overflow: auto;
                 
             }
 
