--- a/static/styles/top_scorer.css
+++ b/static/styles/top_scorer.css
@@ -1,5 +1,6 @@
 .top-scorer-label {
-    grid-row: 2;  
+    grid-row: 2; 
+    grid-column: 1;
     align-self: baseline;
   
 }
@@ -18,3 +19,9 @@
     align-self: end;
     justify-self: end;
     }
+.show-top5-btn{
+    grid-row: 2;
+    grid-column: 1;
+    align-self: center;
+    margin-top: 32px;
+}
