--- a/templates/dynamic/styles/body.css.jinja
+++ b/templates/dynamic/styles/body.css.jinja
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     background-color: {{ team_color }};
     color: #333;
-    font-size: 18px;
+    font-size: 1rem;
     margin: {{ outer_margin }}px;
     transition: all 0.3s ease;
 }
