--- a/templates/dynamic/styles/media_scaling.css.jinja
+++ b/templates/dynamic/styles/media_scaling.css.jinja
@@ -65,8 +65,8 @@
     }
 
     .top-scorer-label {
-        grid-row: 1;  
-        align-self: end;
+        grid-row: 2;  
+        align-self: baseline;
         grid-column: 1;
     }
     
@@ -75,8 +75,8 @@
         grid-column: 1;
         align-items: center;
         text-align: center;
-        align-self: baseline;
-        margin-top: -10px;
+        align-self: center;
+        margin-top: 0px;
     
     }
     .headshot-img {
