--- a/static/styles/tables.css
+++ b/static/styles/tables.css
@@ -16,21 +16,21 @@ th {
     color: black;
     text-align: center;
     border: none;
-    font-size: 18px;
+    font-size: 1.1rem;
 }
 
 tr:nth-child(odd) {
     background-color: #f2f2f2;
     text-align: center;
     border: none;
-    font-size: 18px;
+    font-size: 1.1rem;
 }
 
 tr:nth-child(even) {
     background-color: #fcfcfc;
     text-align: center;
     border: none;
-    font-size: 18px;
+    font-size: 1.1rem;
 }
 
 .table_records{
