--- a/static/styles/top_scorer_modal.css
+++ b/static/styles/top_scorer_modal.css
@@ -18,12 +18,13 @@
         align-self: baseline;
         background-color: white;
         padding: 4px;  
+        max-height: 90vh;
                           
     }
     .leaders-table{
         border-collapse: collapse;
         width: 490px;    
-        max-width: 100vw;
+        max-height: 100vw ;
         text-align: left;  
         white-space: wrap;
         img {
