--- a/static/styles/spoiler_button.css
+++ b/static/styles/spoiler_button.css
@@ -15,6 +15,10 @@
     border-radius: 12px;
     transform: translateY(-25%);
     z-index: 10;
+
+    span {
+        margin-top: 4px;
+    }
 }
 .hide-spoiler {
     display: inline-block;
