--- a/static/styles/top_scorer_modal.css
+++ b/static/styles/top_scorer_modal.css
@@ -11,6 +11,7 @@
         padding-top: 60px;
         justify-content: center;
         align-items: center;
+        text-align: center;
     }
 
     /* Modal Content */
