--- a/static/styles/upcoming_game.css
+++ b/static/styles/upcoming_game.css
@@ -1,8 +1,10 @@
 .upcoming_game{
-    grid-row: 2;
+    grid-row: 3;
     grid-column: 1 / span 3
 }
 .upcoming_game span{
     display: flex;
     align-items: center;
+    padding-block-end: 12px;
+    
 }
